<resources>
    <string name="app_name">理财时代</string>
    <string name="action_settings">Settings</string>
    <string name="field_username">Username</string>
    <string name="field_password">Password</string>
    <string name="field_empty_error">Required fields must not be empty</string>
    <string name="button_login">Login</string>
    <string name="dialog_logging_in">Logging in</string>
    <string name="toast_account_exists">Account exists</string>
    <string name="toast_login_failed">Login failed</string>
    <string name="loading">加载中……</string>
    <string name="under_loading">正在加载</string>
    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="protect1and2">注册即表示同意 <a href="1"><u>《理财时代注册协议》</u></a></string>
    <string name="protocolpayandrepay">我已阅读并同意 <a href="1"><u>《借款合同》</u></a>和<a href="2"><u>《借款合同》</u></a></string>
    <string name="str_recharge_list_argee">我同意 <a href="1">《理财时代资金管理服务协议》</a></string>
    <string name="pay_pwd_set_mark">新版本手机端在投资、提现、转让等操作中将使用手机端的支付密码，支付密码跟网站端不为同一密码。</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_official_guide">OfficialGuideActivity</string>
    <string name="title_activity_official_organization">OfficialOrganization</string>
    <string name="title_activity_official_policy">OfficialPolicy</string>
    <string name="title_activity_official_business">OfficialBusiness</string>
    <string name="title_activity_restlife">RestlifeActivity</string>
    <string name="str_investor_authentication_agree">已阅读并同意<a href="1">《消息理财计划声明书》</a></string>
    <string name="str_account_chengbao">银行资金存管</string>
    <string name="str_account_chengbao2">账户资金安全由保险公司全额承保</string>
    <string name="str_tv_ll_show">您输入的代码匹配不到相关企业,请重新输入!</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="help_1">客户电话：</string>
    <string name="help_2">客服邮箱：</string>
    <string name="help_3">官方QQ群：</string>
    <string name="help_phone">400-821-8616</string>
    <string name="help_phone_time">（工作时间 9:00-17:00）</string>
    <string name="help_email">helpdesk@youyuhaha.com</string>
    <string name="help_qq">S2353457</string>
    <string name="gold_text_1">我的理财金</string>
    <string name="gold_text_2">投资记录</string>
    <string name="gold_text_3">可提取收益</string>
    <string name="gold_text_4">来源/获取时间</string>
    <string name="gold_text_5">金额（元）</string>
    <string name="gold_text_6">状态/有效时间</string>
    <string name="gold_text_7">拥有理财金</string>
    <string name="gold_text_8">投资项目</string>
    <string name="gold_text_9">投资金额（元）</string>
    <string name="gold_text_10">预期收益（元）</string>
    <string name="gold_text_11">拥有理财金</string>
    <string name="gold_text_12">待收收益</string>
    <string name="tv_network">请检查网络是否设置！</string>
    <string name="tv_one_key_invite">一键邀请</string>
    <string name="more_str0">更多</string>
    <string name="more_str1">拨打 </string>
    <string name="more_str2">取消 </string>
    <string name="more_str3">目前版本：V</string>
    <string name="more_str4">您没有安装任何应用市场</string>
    <string name="more_str5">推荐应用</string>
    <string name="more_str6">检测到有新版本</string>
    <string name="more_str7">当前为最新版本</string>
    <string name="more_str8">bbs交流</string>
    <string name="net_error">网络不给力</string>
    <string name="more_str10">常见问题</string>
    <string name="more_str11">资讯中心</string>
    <string name="more_str12">邀请好友</string>
    <string name="more_str13">分享失败</string>
    <string name="more_str14">分享成功</string>
    <string name="more_str15">二维码</string>
    <string name="more_str16">还可以输入</string>
    <string name="more_str17">个字</string>
    <string name="more_str18">建议反馈</string>
    <string name="more_str19">告诉我们您的问题、建议或意见，以帮助我们更好地优化产品……</string>
    <string name="more_str20">手机号码</string>
    <string name="more_str21">正在提交&#8230;</string>
    <string name="more_str22">请输入手机号码</string>
    <string name="more_str23">请输入正确的手机号码</string>
    <string name="more_str24">请输入要提交的内容</string>
    <string name="more_str25">反馈成功，感谢您的支持！</string>
    <string name="more_str26">立即注册</string>
    <string name="more_str27">关于理财时代</string>
    <string name="more_str28">给我们鼓励</string>
    <string name="more_str29">检查新版本</string>
    <string name="more_str30">( 每 日 9: 00 - 17 : 00 )</string>
    <string name="contentDescription">contentDescription</string>
    <string name="more_str31">还没解决您的问题？联系客服</string>
    <string name="more_str32">留言类型</string>
    <string name="more_str33">提交</string>
    <string name="more_str34">还可以输入200个字,我们会尽快联系您</string>
    <string name="more_str35">告诉我们您的问题、建议或意见，以帮助我们更好地优化产品……</string>
    <string name="more_str36">无返回数据</string>
    <string name="str_float_1">开心超赚预期年化收益率说明</string>
    <string name="str_float_2">预期年化收益率</string>
    <string name="str_float_3_1">即：保障收益率</string>
    <string name="str_float_3_2">+到期奖励收益率\n奖励收益率为项目借款人额外回报投资人，根据借款所投资的金融产品到期时的收益高低，回馈给投资人的收益率。\n奖励规则为本项目到期时的最新产品净值（当前最新净值）与本项目募集结束后去投资时的产品净值（当前净值）清算后得到的收益率去除保障收益率。</string>
    <string name="str_float_4">奖励收益率如何计算？</string>
    <string name="str_float_5">温馨提示：</string>
    <string name="str_float_6">1、最新产品净值每周公布一次；\n2、投资开心超赚项目后可在账户投资记录中查看当前最新净值；</string>
    <string name="account_expect_earnings">预期待收收益（元）</string>
    <string name="zero">0.00</string>
    <string name="forget_psw">忘记密码?</string>
    <string name="save_username">记住用户名</string>
    <string name="new_user">新用户</string>
    <string name="free_register">免费注册</string>
    <string name="enjoy_gift">尊享壕礼</string>
    <string name="finance_project_detail_preview_profit_rate">预期年化收益率</string>
    <string name="finance_project_detail_10000_profit_label">投资10,000.00到期回款</string>
    <string name="symbol_percentage">%</string>
    <string name="symbol_plus">+</string>
    <string name="symbol_plus_with_space">&#160;+&#160;</string>
    <string name="symbol_reward">奖</string>
    <string name="symbol_equal">=</string>
    <string name="finance_project_detail_min_invest_label">起投金额</string>
    <string name="finance_project_detail_invest_time_limit_label">投资期限</string>
    <string name="finance_project_detail_max_invest_mount_label">最高投资金额</string>
    <string name="finance_project_detail_deadline_label">投资截止倒计时</string>
    <string name="finance_project_detail_payback_way_label">还款方式</string>
    <string name="finance_project_detail_detail_label">详情</string>
    <string name="bank_cun_guan">银行存管</string>
    <string name="cun_guan_account">银行存管</string>
    <string name="capital_total_collected_reward">已用奖励(券/红包/理财金)</string>
    <string name="capital_total_collected_interest">已赚收益</string>
    <string name="capital_total_foot_slogan">银行资金存管</string>
    <string name="capital_total_accumulated_to_collect_interest">预期待收益</string>
    <string name="capital_total_accumulated_to_collect_interest_with_unit">预期待收益(元)</string>
    <string name="capital_total_net_assert_with_unit">净资产(元)</string>
    <string name="capital_total_net_assert_with_space">净资产&#160;&#160;&#160;&#160;</string>
    <string name="capital_total_under_invest">当前投资中</string>
    <string name="capital_total_available_balance">可用余额</string>
    <string name="capital_total_under_bank_apply">银行处理中</string>
    <string name="capital_total_bank_return">银行处理中（还款）</string>
    <string name="capital_total_preview_total_with_unit">预期总资产(元)</string>
    <string name="capital_total_accumulated_income_with_unit">预期总收益</string>
    <string name="ecw_dialog_not_open_ecw_account_now">暂不开通</string>
    <string name="ecw_dialog_open_ecw_account_now">立即开通</string>
    <string name="ecw_dialog_open_ecw_account_how_old">如何开通银行存管？</string>
    <string name="ecw_dialog_open_ecw_account_how_new">温馨提示</string>
    <string name="ecw_dialog_open_ecw_account_know_more">了解更多></string>
    <string name="ecw_dialog_open_ecw_account_instruction">账户资金银行存管，请开通银行存管</string>
    <string name="ecw_dialog_open_ecw_account_sub_instruction">\n*开通过程中资金将被冻结1个工作日</string>
    <string name="ecw_dialog_open_ecw_account_instruction_how_old">\t\t1.目前开通需要下载增金宝App\n\t\t2.你也可以登录理财时代PC端直接开通\n\t\t3. 原账户资金最晚将于开户后第2天可用</string>
    <string name="ecw_dialog_open_ecw_account_instruction_how_new">\t\t原账户资金最晚将于开户后第2天可用</string>
    <string name="ecw_dialog_open_ecw_account_instruction_auth">账户资金银行存管，开通银行存管后系统将自动完成实名认证</string>
    <string name="risk_test_answer_questions_progress">答题进度：</string>
    <string name="risk_test">风险测试</string>
    <string name="risk_test_declare_content_first">\t\t\t\t本风险属性评估问卷结果系根据您填问卷时所提供的个人资料而推论得知，其结果将作为理财时代对不适合您的产品的提示依据。问卷内容及其结果不构成交易约定，也非投资买卖建议。\n\t\t\t\t本公司不对此份问卷的完整性及真实性负责。您在此问卷上所填的个人资料将完全保密，不以任何理由提供给第三方机构或个人。</string>
    <string name="risk_test_test_right_now">立即测试</string>
    <string name="risk_test_not_test">不测了，我是保守型</string>
    <string name="risk_test_declare_label">重要声明</string>
    <string name="about_purchase">认购信息</string>
    <string name="about_purchase_start_buy_point_label">认购起点</string>
    <string name="about_purchase_start_buy_point_asc_label">认购递增金额</string>
    <string name="about_purchase_open_date_label">开放日</string>
    <string name="about_purchase_confirm_buy_fee_label">认购费</string>
    <string name="about_purchase_apply_buy_fee_label">申购费</string>
    <string name="about_purchase_management_fee_label">管理费</string>
    <string name="about_purchase_buy_back_fee_label">赎回费</string>
    <string name="about_purchase_business_reward_label">业绩管理报酬</string>
    <string name="about_purchase_other_instruction_label">其他说明</string>
    <string name="about_purchase_collect_account">募集账户</string>
    <string name="about_purchase_copy_account_info">复制账户信息</string>
    <string name="found_account">基金账户</string>
    <string name="total_net">累计净值:</string>
    <string name="shsz_300">沪深300:</string>
    <string name="account_name">[账户名]\t</string>
    <string name="account_number">[账户号]\t</string>
    <string name="account_open_bank">[开户行]\t</string>
    <string name="remark">[备  注]\t</string>
    <string name="fund_detail_base_info">基本信息</string>
    <string name="dialog_auto_invest_title">温馨提示</string>
    <string name="dialog_auto_invest_label_one">收不到验证码？验证码出错？或者想跳过 验证码提高投资效率？</string>
    <string name="dialog_auto_invest_other_time">以后再说</string>
    <string name="dialog_auto_invest_open_right_now">立即开通</string>
    <string name="config_choose_env_label">请选择环境</string>
    <string name="config_start_use">开始使用</string>
    <string name="config_current_choose_env">当前环境对应地址：</string>
    <string name="test_env">测试环境</string>
    <string name="yw_env">运维环境</string>
    <string name="normal_env">正式环境</string>
    <string name="config_clear_sp_file">清空Sp文件</string>
</resources>