<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_with_radius"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_ecw_instruction_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bg_ecw_instruction" />

    <RelativeLayout
        android:id="@+id/rl_how_to_open_account_container"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_dialog_title">


        <View
            android:id="@+id/v_divider"
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@color/theme_color" />

        <TextView
            android:id="@+id/tv_how_to_open_account_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/v_divider"
            android:gravity="center"
            android:text="@string/ecw_dialog_open_ecw_account_how_old"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_how_to_open_account_know_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:text="@string/ecw_dialog_open_ecw_account_know_more"
            android:textColor="@color/theme_color"
            android:textSize="14sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_open_account_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="5dp"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:text="@string/ecw_dialog_open_ecw_account_instruction_how_old"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/help_center_dialog_driver" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_negative"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/ecw_dialog_not_open_ecw_account_now"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#DADADA" />

        <TextView
            android:id="@+id/tv_positive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/ecw_dialog_open_ecw_account_now"
            android:textColor="@color/repay_title_text" />
    </LinearLayout>
</LinearLayout>
