<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_with_radius"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_remind_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:lineSpacingExtra="2dp"
        android:padding="10dp"
        android:text="@string/dialog_auto_invest_title"
        android:textColor="@color/dialog_title_black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tv_auto_invest_label_one"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="left"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/dialog_auto_invest_label_one"
        android:textColor="@color/text_black_80a"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_auto_invest_label_two"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="left"
        android:lineSpacingExtra="2dp"
        android:textColor="@color/text_black_80a"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/help_center_dialog_driver" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/dialog_auto_invest_other_time"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#DADADA" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/dialog_auto_invest_open_right_now"
            android:textColor="@color/theme_color"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>
